--- a/threejs/src/index.html
+++ b/threejs/src/index.html
@@ -9,8 +9,8 @@
   <main>
     <div></div>
   </main>
-  <script type="module" src="script.js"></script>
+  <!-- <script type="module" src="script.js"></script> -->
   <!-- <script type="module" src="glb.js"></script> -->
-  <!-- <script type="module" src="draco.js"></script> -->
+  <!-- <script type="module" src="draco.js"></script>  -->
 </body>
 </html>
